fix overlapping pin containers

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -235,8 +235,8 @@ div > h3 {
 /* Pin css based on https://codepen.io/ptzld/pen/adqLxp */
 
 .Pin-container {
-  width: 100vw;
-  height: 100vh;
+  /*width: 100vw;*/
+  /*height: 100vh;*/
   position: absolute;
   left: -10px;
   top: -20px;
@@ -249,7 +249,7 @@ div > h3 {
   background-color: #c50;
   border-radius: 50% 50% 0;
   transform: rotate(45deg);
-  z-index: 11;
+  z-index: 0;
 }
 
 .Pin-body::after {
